--- a/src/options/options.css
+++ b/src/options/options.css
@@ -2,8 +2,12 @@
 	box-sizing: border-box;
 }
 
+html, body {
+	background: aliceblue;
+}
+
 body {
-	font-family: 'Times New Roman', Times, serif;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 	font-size: 100%;
 }
 
@@ -22,6 +26,13 @@ body {
 	a,
 	a:visited {
 		color: blue;
+	}
+
+	h1 {
+		display: flex;
+		flex-direction: row;
+		align-items: center;
+		gap: 0.5rem;
 	}
 	
 	h2 {
@@ -65,6 +76,7 @@ body {
 
 	input {
 		width: 100%;
+		background: #fff;
 	}
 
 	input, button {
@@ -110,7 +122,7 @@ body {
 
 @keyframes okfade {
 	0% {
-		background: rgb(0 255 0 / 0.2);
+		background: rgb(0 255 0 / 0.5);
 	}
 	100% {
 		background: rgb(0 255 0 / 0);
@@ -118,5 +130,5 @@ body {
 }
 
 .ok {
-	animation: 1s okfade linear;
+	animation: 0.7s okfade ease-in;
 }
